--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "creeperstone72",
   "version": "0.1.0",
-  "homepage": "https://CreeperStone72.github.io/creeperstone72",
+  "homepage": "https://CreeperStone72.github.io/creeperstone72/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,8 +11,11 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-icons": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "5.4.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
